@@ -1,34 +1,28 @@
 package greencity.security.service;
 
 import static greencity.ModelUtils.TEST_EMAIL;
+import static greencity.ModelUtils.createAdmin;
 import static greencity.ModelUtils.createEmployee;
 import static greencity.ModelUtils.getAuthority;
-import static greencity.ModelUtils.getAuthorityCategory;
 import static greencity.ModelUtils.getPositions;
 import static greencity.ModelUtils.getUser;
 import static greencity.ModelUtils.getUserEmployeeAuthorityDto;
-import greencity.constant.ErrorMessage;
 import greencity.dto.EmployeePositionsDto;
-import greencity.dto.authorities.AuthorityCategoryDto;
-import greencity.dto.authorities.AuthorityDto;
 import greencity.dto.position.PositionDto;
-import greencity.dto.user.UserEmployeeAuthorityDto;
 import greencity.entity.Authority;
-import greencity.entity.AuthorityCategory;
 import greencity.entity.Position;
 import greencity.entity.User;
 import greencity.enums.Role;
 import greencity.exception.exceptions.BadRequestException;
 import greencity.exception.exceptions.NotFoundException;
-import greencity.repository.AuthorityCategoryRepo;
 import greencity.repository.AuthorityRepo;
 import greencity.repository.PositionRepo;
 import greencity.repository.UserRepo;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
 import org.junit.jupiter.api.AfterEach;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -37,12 +31,8 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.when;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.any;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
@@ -61,8 +51,6 @@ class AuthorityServiceImplTest {
     private PositionRepo positionRepo;
     @Mock
     private Authentication auth;
-    @Mock
-    private AuthorityCategoryRepo authorityCategoryRepo;
     @InjectMocks
     private AuthorityServiceImpl authorityService;
 
@@ -94,7 +82,8 @@ class AuthorityServiceImplTest {
     void updateEmployeesAuthoritiesTest() {
         User employee = createEmployee();
         List<Authority> authority = List.of(getAuthority());
-        List<String> authoritiesName = authority.stream().map(Authority::getName).toList();
+        List<String> authoritiesName = authority.stream().map(Authority::getName)
+            .collect(Collectors.toList());
 
         when(userRepo.findByEmail(TEST_EMAIL)).thenReturn(Optional.of(employee));
         when(authorityRepo.findAuthoritiesByNames(authoritiesName)).thenReturn(authority);
@@ -105,30 +94,6 @@ class AuthorityServiceImplTest {
         verify(userRepo).findByEmail(TEST_EMAIL);
         verify(authorityRepo).findAuthoritiesByNames(authoritiesName);
         verify(userRepo).save(employee);
-    }
-
-    @Test
-    void updateEmployeesAuthoritiesThrowsNotFoundAuthoritiesExceptionTest() {
-        User employee = createEmployee();
-        List<String> requestedAuthorities = List.of("EXISTING_AUTHORITY", "NON_EXISTING_AUTHORITY");
-        List<Authority> foundAuthorities = List.of(getAuthority());
-
-        UserEmployeeAuthorityDto dto = new UserEmployeeAuthorityDto();
-        dto.setEmployeeEmail(TEST_EMAIL);
-        dto.setAuthorities(requestedAuthorities);
-
-        when(userRepo.findByEmail(TEST_EMAIL)).thenReturn(Optional.of(employee));
-        when(authorityRepo.findAuthoritiesByNames(requestedAuthorities)).thenReturn(foundAuthorities);
-
-        NotFoundException exception = assertThrows(NotFoundException.class,
-            () -> authorityService.updateEmployeesAuthorities(dto));
-
-        assertEquals(ErrorMessage.AUTHORITY_NOT_FOUND_BY_NAMES + List.of("NON_EXISTING_AUTHORITY"),
-            exception.getMessage());
-
-        verify(userRepo).findByEmail(TEST_EMAIL);
-        verify(authorityRepo).findAuthoritiesByNames(requestedAuthorities);
-        verify(userRepo, never()).save(any());
     }
 
     @Test
@@ -157,164 +122,33 @@ class AuthorityServiceImplTest {
     }
 
     @Test
-    void updateEmployeesAuthoritiesWithEmptyAuthoritiesTest() {
-        User employee = createEmployee();
-
-        UserEmployeeAuthorityDto dto = new UserEmployeeAuthorityDto();
-        dto.setEmployeeEmail(TEST_EMAIL);
-        dto.setAuthorities(Collections.emptyList());
-
-        when(userRepo.findByEmail(TEST_EMAIL)).thenReturn(Optional.of(employee));
-
-        authorityService.updateEmployeesAuthorities(dto);
-
-        assertTrue(employee.getAuthorities().isEmpty());
-
-        verify(userRepo).findByEmail(TEST_EMAIL);
-        verify(authorityRepo, never()).findAuthoritiesByNames(any());
-        verify(userRepo).save(employee);
-    }
-
-    @Test
     void updateAuthoritiesToRelatedPositionsTest() {
         User employee = createEmployee();
+        Authority authority = getAuthority();
         List<Position> positions = getPositions();
+        List<String> positionNames = List.of("Супер адмін");
 
         when(userRepo.findByEmail(TEST_EMAIL)).thenReturn(Optional.of(employee));
-        when(positionRepo.findAllById(List.of(1L))).thenReturn(positions);
-        when(authorityRepo.findAllByPositionIdsIn(List.of(1L))).thenReturn(List.of(getAuthority()));
+        when(positionRepo.findPositionsByNames(positionNames)).thenReturn(positions);
+        when(authorityRepo.findAuthoritiesByPositions(positionNames)).thenReturn(List.of(getAuthority()));
 
         authorityService.updateAuthoritiesToRelatedPositions(EmployeePositionsDto.builder()
             .email(TEST_EMAIL)
             .positions(List.of(PositionDto.builder()
                 .id(1L)
                 .nameUk("Супер адмін")
-                .nameEn("Super admin")
                 .build()))
             .build());
+        authority.getEmployees().add(createAdmin());
 
         verify(userRepo).findByEmail(TEST_EMAIL);
-        verify(positionRepo).findAllById(List.of(1L));
-        verify(authorityRepo).findAllByPositionIdsIn(List.of(1L));
+        verify(positionRepo).findPositionsByNames(positionNames);
+        verify(authorityRepo).findAuthoritiesByPositions(positionNames);
     }
 
     @Test
     void updateAuthoritiesToRelatedPositionsThrowsNotFoundExceptionTest() {
         var dto = new EmployeePositionsDto();
         assertThrows(UsernameNotFoundException.class, () -> authorityService.updateAuthoritiesToRelatedPositions(dto));
-    }
-
-    @Test
-    void updateAuthoritiesToRelatedPositionsWithNullPositionsTest() {
-        User employee = createEmployee();
-
-        when(userRepo.findByEmail(TEST_EMAIL)).thenReturn(Optional.of(employee));
-
-        EmployeePositionsDto dto = EmployeePositionsDto.builder()
-            .email(TEST_EMAIL)
-            .positions(null)
-            .build();
-
-        authorityService.updateAuthoritiesToRelatedPositions(dto);
-
-        verify(userRepo).findByEmail(TEST_EMAIL);
-        verify(userRepo).save(employee);
-    }
-
-    @Test
-    void updateAuthoritiesToRelatedPositionsWithEmptyPositionsListTest() {
-        User employee = createEmployee();
-
-        when(userRepo.findByEmail(TEST_EMAIL)).thenReturn(Optional.of(employee));
-
-        EmployeePositionsDto dto = EmployeePositionsDto.builder()
-            .email(TEST_EMAIL)
-            .positions(List.of())
-            .build();
-
-        authorityService.updateAuthoritiesToRelatedPositions(dto);
-
-        verify(userRepo).findByEmail(TEST_EMAIL);
-        verify(userRepo).save(employee);
-    }
-
-    @Test
-    void getEmployeesAuthoritiesGroupedByCategoriesTest() {
-        User employee = createEmployee();
-        Authority authority = getAuthority();
-
-        employee.setAuthorities(List.of(authority));
-
-        when(userRepo.findByEmail(TEST_EMAIL)).thenReturn(Optional.of(employee));
-        List<AuthorityCategoryDto> result = authorityService.getEmployeesAuthoritiesGroupedByCategories(TEST_EMAIL);
-
-        assertEquals(1, result.size());
-        AuthorityCategoryDto categoryDto = result.getFirst();
-        assertEquals(authority.getCategory().getNameEn(), categoryDto.getNameEn());
-        assertEquals(authority.getCategory().getNameUk(), categoryDto.getNameUk());
-
-        assertEquals(1, categoryDto.getAuthorities().size());
-        AuthorityDto authorityDto = categoryDto.getAuthorities().getFirst();
-        assertEquals(authority.getName(), authorityDto.getName());
-        assertEquals(authority.getDescriptionEn(), authorityDto.getDescriptionEn());
-        assertEquals(authority.getDescriptionUk(), authorityDto.getDescriptionUk());
-
-        verify(userRepo).findByEmail(TEST_EMAIL);
-    }
-
-    @Test
-    void getAuthoritiesByCategoryTest() {
-        Long categoryId = 1L;
-        Authority authority = getAuthority();
-        AuthorityCategory category = getAuthorityCategory();
-
-        when(authorityCategoryRepo.findById(categoryId)).thenReturn(Optional.of(category));
-        when(authorityRepo.findAllByCategoryId(categoryId)).thenReturn(List.of(authority));
-
-        List<AuthorityDto> result = authorityService.getAuthoritiesByCategory(categoryId);
-
-        assertEquals(1, result.size());
-        AuthorityDto authorityDto = result.getFirst();
-        assertEquals(authority.getName(), authorityDto.getName());
-        assertEquals(authority.getDescriptionEn(), authorityDto.getDescriptionEn());
-        assertEquals(authority.getDescriptionUk(), authorityDto.getDescriptionUk());
-
-        verify(authorityRepo).findAllByCategoryId(categoryId);
-    }
-
-    @Test
-    void getAuthoritiesByCategoryShouldThrowIfCategoryNotFound() {
-        Long categoryId = 999L;
-
-        when(authorityCategoryRepo.findById(categoryId)).thenReturn(Optional.empty());
-
-        NotFoundException exception =
-            assertThrows(NotFoundException.class, () -> authorityService.getAuthoritiesByCategory(categoryId));
-
-        assertEquals(String.format(ErrorMessage.AUTHORITY_CATEGORY_NOT_FOUND, categoryId), exception.getMessage());
-
-        verify(authorityCategoryRepo).findById(categoryId);
-        verifyNoInteractions(authorityRepo);
-    }
-
-    @Test
-    void getAllAuthorityCategoriesTest() {
-        AuthorityCategory category = AuthorityCategory.builder()
-            .id(1L)
-            .nameEn("Clients")
-            .nameUk("Клієнти")
-            .authorities(Collections.emptyList())
-            .build();
-
-        when(authorityCategoryRepo.findAll()).thenReturn(List.of(category));
-
-        List<AuthorityCategoryDto> result = authorityService.getAllAuthorityCategories();
-
-        assertEquals(1, result.size());
-        AuthorityCategoryDto categoryDto = result.getFirst();
-        assertEquals("Clients", categoryDto.getNameEn());
-        assertEquals("Клієнти", categoryDto.getNameUk());
-
-        verify(authorityCategoryRepo).findAll();
     }
 }
